Slightly messy implementation of dynamically created charts.
